--- a/nss.html
+++ b/nss.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Booking</title>
 
-
+ 
 </head>
 <body>
 
@@ -111,7 +111,7 @@
 </div>
 <script>
    function bookTable(restaurantName) {
-        alert("Table booked at " + restaurantName +"  .Menu will be provided ");
+        alert("Table booked at " + restaurantName +"  .Menu will be provided Shortly");
     }
 
     document.querySelector(".menu-button").addEventListener("click", function(){
